--- a/app/src/main/res/layout/activity_register_profesional.xml
+++ b/app/src/main/res/layout/activity_register_profesional.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ViewProfesionalActivity"
+    tools:context=".view.ViewProfesionalActivity"
     android:orientation="vertical">
 
     <com.google.android.material.appbar.MaterialToolbar
