Adapto vista del Mapa, para mostrar los centros en el mapa recuperando los datos de la API y con MVP

--- a/app/src/main/res/layout/activity_register_centro.xml
+++ b/app/src/main/res/layout/activity_register_centro.xml
@@ -270,10 +270,10 @@
             <com.mapbox.maps.MapView
                 android:id="@+id/mvCentro"
                 android:layout_width="200dp"
-                android:layout_height="220dp"
-                app:cameraTargetLat="42.659548"
+                android:layout_height="220dp"/>
+                <!--app:cameraTargetLat="42.659548"
                 app:cameraTargetLng="-8.110613"
-                app:cameraZoom="10.0" />
+                app:cameraZoom="10.0"-->
 
 
         </LinearLayout>
