Añado una opcion de marcar favoritos usando la ROOM de android

--- a/app/src/main/res/menu/menu_options_add.xml
+++ b/app/src/main/res/menu/menu_options_add.xml
@@ -10,5 +10,13 @@
         android:title="Registrar"
         app:showAsAction="always" />
 
+    <item
+        android:id="@+id/favorito"
+        android:icon="@android:drawable/ic_menu_info_details"
+        android:iconTint="@color/purple_700"
+        android:iconTintMode="add"
+        android:title="Registrar"
+        app:showAsAction="always" />
+
 
 </menu>
