--- a/app/src/main/res/layout/activity_view_profesional.xml
+++ b/app/src/main/res/layout/activity_view_profesional.xml
@@ -148,6 +148,24 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ConstraintLayout">
 -->
+
+            <!--<CheckBox
+                android:id="@+id/iconFav"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />-->
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btDelFav"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="#D5ECE7"
+                android:text="Añadir a Favoritos"
+                android:textStyle="bold"
+                app:cornerRadius="16dp"
+                app:iconGravity="textStart" />
+
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btMod"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
