Correcion errores, he introduzco gestión de fechas en la entidad Profesional

--- a/app/src/main/res/layout/activity_register_profesional.xml
+++ b/app/src/main/res/layout/activity_register_profesional.xml
@@ -118,19 +118,43 @@
                     android:inputType="text" />
 
             </com.google.android.material.textfield.TextInputLayout>
+        </LinearLayout>
 
-            <!--<TextView
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tilFechaNacimiento"
+                style="?attr/textInputFilledStyle"
+                android:layout_width="407dp"
+                android:layout_height="wrap_content"
+                android:hint="Fecha de nacimiento"
+                app:endIconMode="clear_text">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etFechaNacimiento"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:focusable="false"
+                    android:clickable="true"
+                    android:drawableEnd="@drawable/ic_fav"
+                    android:onClick="clickDate" />
+
+                <!--<TextView
                 android:id="@+id/textView5"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="@string/tvDni" />-->
 
-            <!--<EditText
+                <!--<EditText
                 android:id="@+id/etDni"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="none" />-->
+            </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
 
         <!--<LinearLayout
