--- a/app/src/main/res/layout/activity_centros.xml
+++ b/app/src/main/res/layout/activity_centros.xml
@@ -25,10 +25,11 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/centros_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:longClickable="true"
         android:scrollIndicators="right"
         app:layout_constraintTop_toBottomOf="@+id/topAppBar"
+        app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_editor_absoluteX="16dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
