--- a/app/src/main/res/layout/activity_profesionales.xml
+++ b/app/src/main/res/layout/activity_profesionales.xml
@@ -22,13 +22,15 @@
         app:titleTextColor="@color/design_default_color_on_primary" />
 
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/profesionales_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:longClickable="true"
-            android:scrollIndicators="right"
-            app:layout_constraintTop_toBottomOf="@id/topAppBar" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/profesionales_list"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:longClickable="true"
+        android:scrollIndicators="right"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/topAppBar"
+        tools:layout_editor_absoluteX="16dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
