--- a/app/src/main/res/layout/activity_residentes.xml
+++ b/app/src/main/res/layout/activity_residentes.xml
@@ -22,11 +22,12 @@
         app:titleTextColor="@color/design_default_color_on_primary" />
 
     <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/residentes_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:longClickable="true"
-            android:scrollIndicators="right"
-            app:layout_constraintTop_toBottomOf="@id/topAppBar" />
+        android:id="@+id/residentes_list"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:longClickable="true"
+        android:scrollIndicators="right"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/topAppBar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
