--- a/app/src/main/res/layout/activity_view_fav.xml
+++ b/app/src/main/res/layout/activity_view_fav.xml
@@ -80,7 +80,7 @@
                 android:id="@+id/btDetails"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_weight="0"
                 android:backgroundTint="#D5ECE7"
                 android:text="Detalles"
@@ -93,7 +93,7 @@
             android:id="@+id/btDelFav"
             style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:backgroundTint="#D5ECE7"
             android:text="Eliminar de Favoritos"
             android:textStyle="bold"
